[gd_scene load_steps=9 format=3 uid="uid://bw4g4sqrid6dl"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_0nx3n"]
[ext_resource type="Theme" uid="uid://dbf3mfbni11oq" path="res://main_menu/main_menu_theme/main_menu_theme.tres" id="2_liuhe"]
[ext_resource type="PackedScene" uid="uid://dmg85pdsmpox8" path="res://game_scene/game_scene.tscn" id="2_pi1d5"]
[ext_resource type="Texture2D" uid="uid://bbmpfj34p0b0l" path="res://main_menu/text_logo.png" id="3_nd25y"]
[ext_resource type="AudioStream" uid="uid://lkbkapalspkk" path="res://game_scene/flipper/flipper_press.ogg" id="5_a8koy"]
[ext_resource type="PackedScene" uid="uid://cj3fkuhefwftt" path="res://game_scene/nebula/nebula.tscn" id="6_kd44w"]
[ext_resource type="AudioStream" uid="uid://deo3obcq7ifte" path="res://main_menu/music/menu bgm.ogg" id="7_55xkq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqvvs"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="MainMenuControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nx3n")
start_scene = ExtResource("2_pi1d5")

[node name="TextLogo" type="Sprite2D" parent="."]
position = Vector2(592, 120)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_nd25y")

[node name="MainMenuButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -348.0
offset_right = 128.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../ControlsButton")
focus_neighbor_bottom = NodePath("../ControlsButton")
focus_next = NodePath("../ControlsButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("2_liuhe")
text = "Play"

[node name="ControlsButton" type="Button" parent="MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../PlayButton")
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
theme = ExtResource("2_liuhe")
text = "How To Play"

[node name="CreditsButton" type="Button" parent="MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../ControlsButton")
focus_neighbor_top = NodePath("../ControlsButton")
focus_neighbor_right = NodePath("../SoundButton")
focus_neighbor_bottom = NodePath("../SoundButton")
focus_next = NodePath("../SoundButton")
focus_previous = NodePath("../ControlsButton")
theme = ExtResource("2_liuhe")
text = "Credits"

[node name="SoundButton" type="Button" parent="MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../CreditsButton")
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../CreditsButton")
theme = ExtResource("2_liuhe")
text = "Sound"

[node name="QuitButton" type="Button" parent="MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../SoundButton")
focus_neighbor_top = NodePath("../SoundButton")
focus_neighbor_right = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../SoundButton")
theme = ExtResource("2_liuhe")
text = "Quit"

[node name="CreditPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_liuhe")
theme_override_styles/panel = SubResource("StyleBoxFlat_qqvvs")

[node name="MarginContainer" type="MarginContainer" parent="CreditPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CreditPanel/MarginContainer"]
layout_mode = 2

[node name="JamLabel" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderLarge"
text = "- A game made for GMTK 2023 -"
horizontal_alignment = 1

[node name="JamLabel2" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderSmall"
text = "(July 7th - 9th, 2023)"
horizontal_alignment = 1

[node name="JamLabel3" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderSmall"
text = "Theme: \"roles reversed\""
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_liuhe")

[node name="VBoxContainer" type="VBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabel1" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Design:"
horizontal_alignment = 1

[node name="CreditsLabel2" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Zereijin"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabel2" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Programming:"
horizontal_alignment = 1

[node name="CreditsLabel3" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Hawk777
doublea999
Teriyakisaurus"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabel3" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Art & Audio:"
horizontal_alignment = 1

[node name="CreditsLabel4" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "FydaTECH"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabel3" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Shaders:"
horizontal_alignment = 1

[node name="CreditsLabel4" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Teriyakisaurus"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabelAddOns" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Add-Ons:"
horizontal_alignment = 1

[node name="CreditsLabelAddOns2" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "SmartShape2D"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabelFonts" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Fonts:"
horizontal_alignment = 1

[node name="CreditsLabelFonts2" type="Label" parent="CreditPanel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "7-segment by Jan Bobrowski
Keypunch029 by Stewart C. Russell"
horizontal_alignment = 1

[node name="CloseCreditsButton" type="Button" parent="CreditPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource("2_liuhe")
text = "Go Back"

[node name="ControlsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_liuhe")
theme_override_styles/panel = SubResource("StyleBoxFlat_qqvvs")

[node name="MarginContainer" type="MarginContainer" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsPanel/MarginContainer"]
layout_mode = 2

[node name="ObjectiveTitleLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "
OBJECTIVE:"
horizontal_alignment = 1

[node name="ObjectiveLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "As a pinball, you are tired of being knocked up and down and all around.
End the game as quickly as you can, with as low of a score
as you can, and maybe the humans will finally leave you alone."
horizontal_alignment = 1

[node name="ControlsTitleLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "CONTROLS:"
horizontal_alignment = 1

[node name="ControlsLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Arrow Keys / WASD / D-Pad: Nudge yourself in a direction
Space Bar / A button: Hold to slow your velocity

Note: All actions take an amount of willpower.
If you do not have enough willpower, you
will not be able to act until it replenishes."
horizontal_alignment = 1

[node name="CloseControlsButton" type="Button" parent="ControlsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource("2_liuhe")
text = "Go Back"

[node name="SoundPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_liuhe")
theme_override_styles/panel = SubResource("StyleBoxFlat_qqvvs")

[node name="PreviewSounds" type="Node" parent="SoundPanel"]

[node name="SFX" type="AudioStreamPlayer" parent="SoundPanel/PreviewSounds"]
stream = ExtResource("5_a8koy")
bus = &"SFX"

[node name="MarginContainer" type="MarginContainer" parent="SoundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SoundPanel/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="SoundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="MasterLabel" type="Label" parent="SoundPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Master:"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="SoundPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../CloseSoundButton")
focus_neighbor_top = NodePath("../../CloseSoundButton")
focus_neighbor_right = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
focus_previous = NodePath("../../CloseSoundButton")
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="SoundPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Music:"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SoundPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../MasterSlider")
focus_neighbor_top = NodePath("../MasterSlider")
focus_neighbor_right = NodePath("../SFXSlider")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../MasterSlider")
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="SoundPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_type_variation = &"HeaderMedium"
text = "Sound effects:"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="SoundPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../MusicSlider")
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_right = NodePath("../../CloseSoundButton")
focus_neighbor_bottom = NodePath("../../CloseSoundButton")
focus_next = NodePath("../../CloseSoundButton")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.05

[node name="CloseSoundButton" type="Button" parent="SoundPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../GridContainer/SFXSlider")
focus_neighbor_top = NodePath("../GridContainer/SFXSlider")
focus_neighbor_right = NodePath("../GridContainer/MasterSlider")
focus_neighbor_bottom = NodePath("../GridContainer/MasterSlider")
focus_next = NodePath("../GridContainer/MasterSlider")
focus_previous = NodePath("../GridContainer/SFXSlider")
theme = ExtResource("2_liuhe")
text = "Go Back"

[node name="nebula" parent="." instance=ExtResource("6_kd44w")]
z_index = -100
position = Vector2(569, 321)
scale = Vector2(3, 3)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_55xkq")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainMenuButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuButtonContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MainMenuButtonContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenuButtonContainer/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="MainMenuButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CreditPanel/MarginContainer/VBoxContainer/CloseCreditsButton" to="." method="_on_close_credits_button_pressed"]
[connection signal="pressed" from="ControlsPanel/MarginContainer/VBoxContainer/CloseControlsButton" to="." method="_on_close_controls_button_pressed"]
[connection signal="value_changed" from="SoundPanel/MarginContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_volume_slider_value_changed" binds= ["Master"]]
[connection signal="value_changed" from="SoundPanel/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_volume_slider_value_changed" binds= ["Music"]]
[connection signal="value_changed" from="SoundPanel/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_volume_slider_value_changed" binds= ["SFX"]]
[connection signal="pressed" from="SoundPanel/MarginContainer/VBoxContainer/CloseSoundButton" to="." method="_on_close_sound_button_pressed"]
